style.css
/* ... */
.container-full .top-head-description {
	color: #bababa;
	margin: 8px 0 6px 20px;
	font-size: 14px;
}

.container-full .top-head-social .icons {
	float: right;
	margin-top: 5px;
	margin-right: 20px;
	margin-bottom: 6px;
}

.container-full .top-head-social .icons a {
	float: right;
	height: 20px;
	width: 20px;
	margin-left: 5px;
}

.container-full .top-head-social .icons a img {
	height: 20px;
	width: 20px;
}

header #social .icons a {
  float: right;
  margin-left: 5px;
}

.icons {
	margin-top: 15px;
}

/*======================================= DETAILS =============================================*/

header#cc-header h1.site-title {
	margin-bottom: 15px;
	font-size: 32px;
	font-weight: 600;
}

header#cc-header h2.site-description {
	font-size: 14px;
	margin: 0;
}

header#cc-header .contact_details {
	color: #888;
  float: right;
	margin-top: 15px;
}

header#cc-header .contact_details .cc-telephone-number {
	text-align: right;
}

header#cc-header .contact_details .cc-telephone-number img {
	margin-top: -3px;
	margin-left: 10px;
}

header#cc-header .contact_details .cc-email {
	text-align: right;
}

header#cc-header .contact_details .cc-email img {
	margin-top: -2px;
	margin-left: 10px;
}

header#cc-header .register {
  float: right;
}

header#cc-header .blog_description {
  float: right; 
}

header#cc-header p {
  font-size: 1.2em;
}

/*======================================= SEARCH ===============================================*/

header #search #searchform {
  float: right;
	margin-top: 20px;
}

/********************************************************************************************************************/
/******************************************** MENU ******************************************************************/
/********************************************************************************************************************/

#navigation {
 	margin-bottom: 30px; 
}
.main-navigation.navbar {
	margin-bottom: 0;
}
.main-navigation .navbar-inner {
	padding: 0;
	min-height: 20px;
  background: #b6b6b6;
  background: -moz-linear-gradient(top,  #b6b6b6 0%, #a4a4a4 1%, #919191 51%, #858585 52%, #717171 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b6b6b6), color-stop(2%,#a4a4a4), color-stop(51%,#919191), color-stop(52%,#858585), color-stop(100%,#717171));
  background: -webkit-linear-gradient(top,  #b6b6b6 0%,#a4a4a4 2%,#919191 51%,#858585 52%,#717171 100%);
  background: -o-linear-gradient(top,  #b6b6b6 0%,#a4a4a4 1%,#919191 51%,#858585 52%,#717171 100%);
  background: -ms-linear-gradient(top,  #b6b6b6 0%,#a4a4a4 1%,#919191 51%,#858585 52%,#717171 100%);
  background: linear-gradient(to bottom,  #b6b6b6 0%,#a4a4a4 1%,#919191 51%,#858585 52%,#717171 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4a4a4', endColorstr='#717171',GradientType=0 );
	box-shadow: none;
  -webkit-border-radius: 3px;  
  border-radius: 3px;
  border: 1px solid;
  border-color: #888 #666 #666 #666;
}
.main-navigation .nav > li {
  border-right: 1px solid #b6b6b6;
  -webkit-box-shadow:  1px 0px 0px 0px rgba(0,0,0,0.3);
  box-shadow:  1px 0px 0px 0px rgba(0,0,0,0.3);
}
.main-navigation .nav > li > a {
  display: block;
  color: #fff;
  font-size: 1.1em;
	text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.5);
}
.main-navigation .nav > li.dropdown > a.dropdown-toggle .caret {
	border-top-color: #fff;
	border-bottom-color: #fff;
  margin-top: 10px;
}
.main-navigation .nav > li > a:hover {
  color:  #f6f6f6;
  background: #666;
}
.main-navigation .nav .active > a, .main-navigation .nav .current_page_item > a {
  color: #FFFFFF;
  background: #717171;
}
.main-navigation .nav li ul li a:hover, .main-navigation .nav .current_page_item > a:hover {
	color: #c5c5c5;
	background: #717171;
}
.main-navigation .nav li ul li a {
  color: #f6f6f6;
}
.main-navigation .nav li ul li ul {
  list-style: none;
  margin-left: 0;
}
.main-navigation .nav li ul li ul li a{
  padding-left: 24px;
}
.main-navigation .nav li ul li ul li ul li a {
	padding-left: 30px;
}
.main-navigation .nav li.dropdown:hover ul.dropdown-menu {
  display: block;
  background: #666;
  border-radius: 0;
	margin-top: 0;
}
.navbar .nav > li > .dropdown-menu::before {
	position: absolute;
	top: -7px;
	left: 9px;
	display: inline-block;
	border-right: 7px solid transparent;
	border-bottom: 7px solid #666;
	border-left: 7px solid transparent;
	border-bottom-color: rgba(0, 0, 0, 0.2);
	content: '';
}
.navbar .nav > li > .dropdown-menu::after {
	position: absolute;
	top: -6px;
	left: 10px;
	display: inline-block;
	border-right: 6px solid transparent;
	border-bottom: 6px solid #666;
	border-left: 6px solid transparent;
	content: '';
}
#navigation #searchform {
	margin-right: 15px;
}
.navbar .btn-navbar {
	margin-bottom: 5px;
}

/********************************************************************************************************************/
/******************************************** MAIN CONTENT **********************************************************/
/********************************************************************************************************************/

.container {
  background: transparent;
}
article.post, article.page, article.attachment {
  margin-bottom: 30px;
	padding: 0;
  background: #fdfdfd;
  border: 1px solid #eaeaea;
  -webkit-border-radius: 3px;  
  border-radius: 3px;
  overflow: hidden;
  -webkit-box-shadow:  0px 1px 0px 0px #adadad;
  box-shadow:  0px 1px 0px 0px #adadad;
}
.entry-content {
  margin: 0;
}
.page-header {
  margin-top: 0;
  padding: 0;
  border: none;
}

/*==================================== POST AND PAGE CONTENT ===========================================*/

article {
  background: #fff;
}
.entry-header {
  margin: 0;
}
.entry-summary {
  margin: 0;
	padding: 20px;
}
.entry-content {
  padding: 20px;
}
/* ... */

